<resources>
    <string name="app_name">Calculator</string>
    <string name="_47">47</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="bracket_l">(</string>
    <string name="bracket_right">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="x">x!</string>
    <string name="square">Х²</string>
    <string name="root">√</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multi">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtr">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sum">+</string>
    <string name="pi">Pi</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="result">=</string>
</resources>