<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_sec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7.5"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="bottom|end"
        android:paddingEnd="15dp" />

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:gravity="bottom|end"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textSize="53sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:gravity="top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_AC"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/ac"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_C"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/c"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_bracket_left"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/bracket_l" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_bracket_right"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/bracket_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_sin"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textAllCaps="false"
                android:textColor="@color/dark_yellow"
                android:text="@string/sin"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_cos"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textAllCaps="false"
                android:textColor="@color/dark_yellow"
                android:text="@string/cos"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_tan"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textAllCaps="false"
                android:textColor="@color/dark_yellow"
                android:text="@string/tan" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_log"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textAllCaps="false"
                android:textColor="@color/dark_yellow"
                android:text="@string/log" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_factorial"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textAllCaps="false"
                android:textColor="@color/dark_yellow"
                android:text="@string/x"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_square"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/square"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_root"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/design_button"
                android:text="@string/root"
                android:textColor="@color/dark_yellow" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_division"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/division" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_7"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_7"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_8"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_8"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_9"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_multiplication"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/multi" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_4"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_4"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_5"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_5"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_6"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_6" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_subtraction"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/subtr" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_1"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_2"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_2"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_3"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_sum"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/sum" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_Pi"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/pi"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_0"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/_0"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_point"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/white"
                android:text="@string/point" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bottom_result"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/design_button"
                android:layout_margin="@dimen/layout_margin"
                android:textColor="@color/dark_yellow"
                android:text="@string/result" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>